# django-app

./: .dockerignore  Dockerfile  docker-compose.yaml  pyproject.toml
database/: db.sqlite3
mysite/: settings.py
