[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["Игорь Белых <4340345@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.0"
django-rest-framework = "^0.1.0"
pillow = "^10.0.0"
django-debug-toolbar = "^4.1.0"
django-filter = "^23.2"
asgiref = "^3.7.2"
djangorestframework = "^3.14.0"
pyt = "^1.0.5"
sentry-sdk = "^1.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
